# llm-gha-eval

./: .gitignore  analysis.py  app.py  assistant.py  main.py  menu.py  prompts.json  requirements.txt  run.sh  system_prompts.json  system_prompts_complete.json  utils.py  viewer.py
analysis/: actionlint.py  analyse.py  analyse_judge.py  bleu_score.py  deepdiff_score.py  extract_yaml.py  present.py  present_averages.py  standardize_yaml.py
assistant/: main.py  prompts.md  requirements.txt
assistants/: assistant.py
config/: prompts.json  repos-1-year_repos_done.csv  system_prompts.json
data_processing/: step1_create_valid_workflow_list.py  step2_generate_descriptions.py  step3_upgrade_stats.py  step4_filter_and_group.py  step5_dataset_split.py  step6_finetuning_formatting.py  step7_make_hf_dataset.py  step7_prepare_batches.py  step8_make_sm_dataset.py  step8_train_dataset.py  step9_split_train.py
dataset/: load_dataset.py
eval/: corrector.py  distant.py  get_gpt_results.py  gpt.py  inference.py  inference_vllm.py  judge.py  local.py  utils.py
finetuning/: codellama_finetune.py  corrector_finetune.py  finetune.py  finetuning_utils.py  gpt_finetune.py  gpt_finetuning.py  make_sm_finetune_dataset.py  merge_model.py  (+4 more)
inference/: Cargo.toml  pyproject.toml
inference/src/: lib.rs
inference/src/evaluation/: llm_as_judge.rs  mod.rs
inference/src/generation/: algorithms.rs  mod.rs  utils.rs
lge_rs/: Cargo.toml
lge_rs/src/: assistant.rs  main.rs  utils.rs
lge_rs/src/evaluation/: llm_as_judge.rs  mod.rs
lge_rs/src/inference/: docs.rs  mod.rs  utils.rs
(+248 files in other folders)
