[package]
name = "lge_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
dotenv = "0.15.0"
indicatif = "0.17.8"
rayon = "1.10.0"
rayon-progress = "1.0.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
